--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -1,9 +1,120 @@
-h1{
-    color: red;
-	font-family: "Shrikhand";
+@import 'variables';
+@import 'mixin';
 
 
-    img{
-    height: 15px;
+html {
+    font-size: 16px;
 }
+
+body {
+    margin: 0;
+}
+
+//
+header {
+    height: 90px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .logo {
+        display: flex;
+        width: 100%;
+        height: 2.25rem;
+
+        justify-content: center;
+        align-items: center;
+    }
+
+    .arrow {
+        //display: none;
+        position: absolute;
+        left: 16px;
+        top: 9px;
+        size-adjust: 2em;
+        text-decoration: none;
+        color: black;
+    }
+
+
+    .formulaire_de_recherche {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        background-color: $fond_gris;
+
+
+        form {
+            //height: 50px;
+            //width: 100%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            align-items: center;
+
+
+            .p {
+                display: flex;
+                flex-direction: row;
+            }
+
+            //.point {
+            //    color: rgba(0, 0, 0, 0.8);
+            // }
+
+            #formulaire {
+                border-style: none;
+                color: rgba(0, 0, 0);
+            }
+        }
+    }
+}
+
+//
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: $fond_grispale;
+
+    h1 {
+        font-size: 1.5em;
+        text-align: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 0 70px;
+        //width: 152px;
+    }
+
+    p {
+        font-size: 1.125em;
+        text-align: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 0 30px;
+    }
+
+    .button_resto {
+        height: 50px;
+        width: 218px;
+        display: inline-block;
+        justify-content: center;
+        padding: 10px 20px;
+        background-color: $color_button;
+        color: white;
+        text-align: center;
+        //text-decoration: none;
+        font-size: 1em;
+        border-radius: 25px;
+        border: none;
+        box-shadow: 0px 03px 0 rgb(0, 0, 0, 0.3);
+        cursor: pointer;
+    }
+
+    .button_resto:hover {
+        background-color: $color_button_light;
+    }
 }
