--- a/SASS/variables.scss
+++ b/SASS/variables.scss
@@ -1,5 +1,16 @@
 $fond_gris: rgba(234, 234, 234, 1);
 $fond_grispale: rgb(225, 225, 225);
-$color_number: rgb(147, 86, 220);
+$color_fond: rgb(246, 246, 246);
+$color_i: rgba(126, 126, 126, 1);
+
+
+
+$color_primaire: rgba(147, 86, 220, 1);
+$color_secondaire: rgba(255, 121, 218, 1);
+$color_tertiaire: rgba(153, 226, 208, 1);
+$color_quaternaire: rgba(0, 135, 102, 1);
+
+$color_number_sombre: rgba(0, 58, 104, 1);
 $color_button: rgba(138, 43, 226, 1);
 $color_button_light: rgba(138, 43, 226, 0.9);
+$fond: rgba(53, 53, 53, 1);
