--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -1,6 +1,15 @@
+* {
+    font-family: 'roboto', 'Shrikhand&display', sans-serif;
+}
+
 @import 'variables';
 @import 'mixin';
 
+
+img {
+    width: 25px;
+    height: auto;
+}
 
 html {
     font-size: 16px;
@@ -12,40 +21,61 @@ body {
 
 //
 header {
-    height: 90px;
+    height: auto;
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
 
-    .logo {
-        display: flex;
+    .titre {
         width: 100%;
-        height: 2.25rem;
+        height: 63px;
 
-        justify-content: center;
-        align-items: center;
+        //background-color: rgb(103, 37, 37);
+
+
+        .logo {
+            display: flex;
+            width: 100%;
+            height: 2.25rem;
+            margin: 15px 0;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 5px 5px rgb(0, 0, 0, 0.5);
+        }
+
+        .arrow {
+            //display: none;
+            position: absolute;
+            left: 16px;
+            top: 9px;
+            margin: 1rem;
+            text-decoration: none;
+            color: black;
+        }
     }
-
-    .arrow {
-        //display: none;
-        position: absolute;
-        left: 16px;
-        top: 9px;
-        size-adjust: 2em;
-        text-decoration: none;
-        color: black;
-    }
-
 
     .formulaire_de_recherche {
         display: flex;
+        width: 100%;
         flex-direction: row;
         justify-content: center;
+        align-items: center;
         background-color: $fond_gris;
+        box-shadow: 0px 5px 5px rgb(0, 0, 0, 0.5);
 
+        //box-shadow: 0px -5px 5px rgb(0, 0, 0, 0.5);
+        .point {
+            color: $fond;
+            margin: 0 20px;
+        }
 
-        form {
+        p {
+            font-size: 1rem;
+            color: $fond;
+        }
+
+        /*form {
             //height: 50px;
             //width: 100%;
             display: flex;
@@ -67,7 +97,7 @@ header {
                 border-style: none;
                 color: rgba(0, 0, 0);
             }
-        }
+        }*/
     }
 }
 
@@ -76,7 +106,8 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: $fond_grispale;
+    background-color: $color_fond;
+    padding: 2rem 0;
 
     h1 {
         font-size: 1.5em;
@@ -94,27 +125,76 @@ header {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        margin: 0 30px;
+        margin: 30px 30px;
     }
 
     .button_resto {
-        height: 50px;
-        width: 218px;
-        display: inline-block;
+        display: flex;
         justify-content: center;
-        padding: 10px 20px;
-        background-color: $color_button;
-        color: white;
-        text-align: center;
-        //text-decoration: none;
-        font-size: 1em;
-        border-radius: 25px;
-        border: none;
-        box-shadow: 0px 03px 0 rgb(0, 0, 0, 0.3);
-        cursor: pointer;
     }
 
-    .button_resto:hover {
-        background-color: $color_button_light;
+    .button {
+        @include btn (218px);
+    }
+
+    .button:hover {
+        background: linear-gradient(lighten($color_secondaire, 5%), lighten($color_primaire, 5%));
+        box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.7);
+    }
+}
+
+//
+
+nav {
+    margin: 20px 20px;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1 {
+        font-size: 1.5rem;
+        margin: 0;
+        width: 335px;
+    }
+
+    .choix {
+        width: 335px;
+        position: relative;
+        margin-bottom: 40px;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        align-items: center;
+        border-style: none;
+        border-radius: 20px;
+        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+        background-color: $color_fond;
+
+        .nbr {
+            position: absolute;
+            left: -37px;
+            width: 24px;
+            height: 24px;
+            border-style: none;
+            border-radius: 24px;
+            background-color: $color_primaire;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
+
+        i {
+            margin-left: 35px;
+            color: $color_i;
+        }
+
+        p {
+            font-weight: bold;
+            margin-left: 25px;
+        }
+
+
     }
 }
