--- a/SASS/mixin.scss
+++ b/SASS/mixin.scss
@@ -9,3 +9,17 @@
 	background: linear-gradient($color_secondaire, $color_primaire );
 	cursor: pointer;
 }
+
+@mixin encart {
+	position: absolute;
+	right: 4%;
+	top: 4%;
+	font-size: 1.5rem;
+	font-weight: bold;
+	border: 3px $color_tertiaire solid;
+	background-color: $color_tertiaire;
+	color: $color_quaternaire;
+	border-radius: 2px;
+	padding: 5px 10px;
+	width: auto;
+}
