--- a/SASS/mixin.scss
+++ b/SASS/mixin.scss
@@ -1,25 +1,65 @@
-@mixin btn ($largeur) {
-	color: white;
-	font-size: 1em;
-	height: 50px;
-	width: $largeur;
-	border-radius: 25px;
-	border: none;
-	box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.5);
-	background: linear-gradient($color_secondaire, $color_primaire );
-	cursor: pointer;
+@mixin hea () {
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .titre {
+        width: 100%;
+
+        .logo {
+            display: flex;
+            width: 100%;
+            height: 2.25rem;
+            padding: 20px 0;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 5px 5px rgb(0, 0, 0, 0.2);
+        }
+
+        .arrow {
+            position: absolute;
+            top: 14px;
+            margin: 1rem;
+            text-decoration: none;
+            color: black;
+        }
+    }
 }
 
-@mixin encart {
-	position: absolute;
-	right: 4%;
-	top: 4%;
-	font-size: 1.5rem;
-	font-weight: bold;
-	border: 3px $color_tertiaire solid;
-	background-color: $color_tertiaire;
-	color: $color_quaternaire;
-	border-radius: 2px;
-	padding: 5px 10px;
-	width: auto;
+@mixin btn($largeur) {
+    display: flex;
+    justify-content: center;
+
+    .button {
+        color: white;
+        font-size: 1em;
+        height: 50px;
+        width: $largeur;
+        border-radius: 25px;
+        border: none;
+        box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.5);
+        background: linear-gradient($color_secondaire, $color_primaire );
+        cursor: pointer;
+    }
+
+    .button:hover {
+        background: linear-gradient(lighten($color_secondaire, 5%), lighten($color_primaire, 5%));
+        box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.7);
+    }
+}
+
+@mixin encart () {
+    position: absolute;
+    right: 4%;
+    top: 4%;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border: 3px $color_tertiaire solid;
+    background-color: $color_tertiaire;
+    color: $color_quaternaire;
+    border-radius: 2px;
+    padding: 5px 10px;
+    width: auto;
 }
