--- a/SASS/style.css
+++ b/SASS/style.css
@@ -2,6 +2,25 @@
   font-family: "roboto", "Shrikhand&display", sans-serif;
 }
 
+/*@mixin btn ($largeur) {
+    color: white;
+    font-size: 1em;
+    height: 50px;
+    width: $largeur;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.5);
+    background: linear-gradient($color_secondaire, $color_primaire );
+    cursor: pointer;
+
+
+}*/
+/*@mixin btnhover () {
+    .button:hover {
+        background: linear-gradient(lighten($color_secondaire, 5%), lighten($color_primaire, 5%));
+        box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.7);
+    }
+}*/
 html {
   font-size: 16px;
 }
@@ -16,6 +35,18 @@ a {
   text-decoration: none;
 }
 
+main {
+  max-width: 768px;
+  width: 100%;
+}
+
+/*.loader {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+}*/
 header {
   height: auto;
   width: 100%;
@@ -42,6 +73,9 @@ header .titre .arrow {
   text-decoration: none;
   color: black;
 }
+header .arrow {
+  display: none;
+}
 header .formulaire_de_recherche {
   display: flex;
   width: 100%;
@@ -53,10 +87,12 @@ header .formulaire_de_recherche {
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
 }
 header .formulaire_de_recherche .point {
+  color: rgb(53, 53, 53);
   margin-right: 20px;
 }
 header .formulaire_de_recherche p {
   font-size: 1rem;
+  color: rgb(53, 53, 53);
 }
 
 .intro {
@@ -81,12 +117,13 @@ header .formulaire_de_recherche p {
   flex-wrap: wrap;
   justify-content: center;
   margin: 25px 30px;
+  color: rgb(53, 53, 53);
 }
 .intro .button_resto {
   display: flex;
   justify-content: center;
 }
-.intro .button {
+.intro .button_resto .button {
   color: white;
   font-size: 1em;
   height: 50px;
@@ -97,14 +134,14 @@ header .formulaire_de_recherche p {
   background: linear-gradient(rgb(255, 121, 218), rgb(147, 86, 220));
   cursor: pointer;
 }
-.intro .button:hover {
+.intro .button_resto .button:hover {
   background: linear-gradient(#ff93e1, #a16be0);
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
 }
 
 nav {
-  margin: 40px 20px;
-  width: 100%;
+  margin: 40px 5%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -214,8 +251,26 @@ nav .choix p {
 }
 .resto .card .card-heart {
   position: absolute;
-  left: 90%;
+  left: 85%;
   top: 80%;
+  font-size: 1.6rem;
+}
+.resto .card .card-heart i {
+  position: absolute;
+  cursor: pointer;
+}
+.resto .card .card-heart .coeur-plein {
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 1000ms;
+  background-image: linear-gradient(rgb(255, 121, 218), rgb(147, 86, 220));
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transform: scale(1.1);
+}
+.resto .card .card-heart .coeur-plein:hover {
+  opacity: 1;
 }
 .resto .card .nouveau p {
   position: absolute;
@@ -280,8 +335,15 @@ footer ul .partenaire {
   padding-right: 10px;
 }
 
-/*@media screen and (min-width:768px) and (max-width:1440px) {
-    main {
-        width: 768px;
-    }
-}*//*# sourceMappingURL=style.css.map */
+@media (min-width: 768px) and (max-width: 1440px) {
+  main {
+    max-width: 1440px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1441px) {
+  main {
+    max-width: 1441px;
+    width: 100%;
+  }
+}/*# sourceMappingURL=style.css.map */
