--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -19,42 +19,25 @@ a {
     text-decoration: none;
 }
 
+main {
+    max-width: 768px;
+    width: 100%;
+}
+
+/*.loader {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+}*/
+
 //
 header {
-    height: auto;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    @include hea ();
 
-    .titre {
-        width: 100%;
-        //height: 63px;
-
-        //background-color: rgb(103, 37, 37);
-
-
-        .logo {
-            //position: relative;
-            display: flex;
-            width: 100%;
-            height: 2.25rem;
-            //margin: 20px 0;
-            padding: 20px 0;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0px 5px 5px rgb(0, 0, 0, 0.2);
-        }
-
-        .arrow {
-            //display: none;
-            position: absolute;
-            //left: 16px;
-            top: 14px;
-            margin: 1rem;
-            text-decoration: none;
-            color: black;
-        }
+    .arrow {
+        display: none;
     }
 
     .formulaire_de_recherche {
@@ -68,13 +51,13 @@ header {
         box-shadow: 0px 5px 5px rgb(0, 0, 0, 0.2);
 
         .point {
-            //color: $fond;
+            color: $color_footer;
             margin-right: 20px;
         }
 
         p {
             font-size: 1rem;
-            //color: $fond;
+            color: $color_footer;
         }
 
     }
@@ -95,7 +78,6 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         margin: 0 70px;
-        //width: 152px;
     }
 
     p {
@@ -105,29 +87,19 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         margin: 25px 30px;
-        //color: $fond-footer;
+        color: $color_footer;
     }
 
     .button_resto {
-        display: flex;
-        justify-content: center;
-    }
-
-    .button {
         @include btn (218px);
-    }
-
-    .button:hover {
-        background: linear-gradient(lighten($color_secondaire, 5%), lighten($color_primaire, 5%));
-        box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.7);
     }
 }
 
 //
 
 nav {
-    margin: 40px 20px;
-    width: 100%;
+    margin: 40px 5%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -177,11 +149,8 @@ nav {
 
         p {
             font-weight: bold;
-            //margin-left: 25px;
             margin: 30px 0 30px 25px;
         }
-
-
     }
 }
 
@@ -253,12 +222,37 @@ nav {
 
         .card-heart {
             position: absolute;
-            left: 90%;
+            left: 85%;
             top: 80%;
+            font-size: 1.6rem;
+
+
+            i {
+                position: absolute;
+                cursor: pointer;
+            }
+
+            .coeur-plein {
+                opacity: 0;
+                transition-property: all;
+                transition-duration: 1000ms;
+                //transition: opacity 200ms;
+                background-image: linear-gradient($color_secondaire, $color_primaire);
+                background-clip: text;
+                -webkit-background-clip: text;
+                color: transparent;
+                transform: scale(1.1);
+
+                &:hover {
+                    opacity: 1;
+                }
+            }
         }
 
+
+
         .nouveau p {
-            @include encart;
+            @include encart();
             /*position: absolute;
             right: 4%;
             top: 4%;
@@ -332,8 +326,21 @@ footer {
 
 }
 
-/*@media screen and (min-width:768px) and (max-width:1440px) {
+@media
+
+/*screen and*/
+(min-width:768px) and (max-width:1440px) {
     main {
-        width: 768px;
+        max-width: 1440px;
+        width: 100%;
+
     }
-}*/
+}
+
+@media screen and (min-width: 1441px) {
+    main {
+        max-width: 1441px;
+        width: 100%;
+
+    }
+}
