--- a/SASS/style.css
+++ b/SASS/style.css
@@ -2,25 +2,6 @@
   font-family: "roboto", "Shrikhand&display", sans-serif;
 }
 
-/*@mixin btn ($largeur) {
-    color: white;
-    font-size: 1em;
-    height: 50px;
-    width: $largeur;
-    border-radius: 25px;
-    border: none;
-    box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.5);
-    background: linear-gradient($color_secondaire, $color_primaire );
-    cursor: pointer;
-
-
-}*/
-/*@mixin btnhover () {
-    .button:hover {
-        background: linear-gradient(lighten($color_secondaire, 5%), lighten($color_primaire, 5%));
-        box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.7);
-    }
-}*/
 html {
   font-size: 16px;
 }
@@ -151,11 +132,19 @@ nav h1 {
   margin-bottom: 25px;
   width: 335px;
 }
+nav .placement-nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 nav .choix {
   width: 335px;
   position: relative;
   margin-bottom: 20px;
-  margin-left: 10px;
+  margin-left: 30px;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -187,20 +176,24 @@ nav .choix i.store {
 }
 nav .choix p {
   font-weight: bold;
-  margin: 30px 0 30px 25px;
+  margin: 28px 25px;
+}
+
+.placement-resto {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .resto {
-  padding: 40px 0px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 40px 0px 0px;
   background-color: rgb(246, 246, 246);
 }
 .resto h1 {
   font-size: 1.5rem;
-  margin: 20px 0;
+  margin: 0px 5% 25px;
+  padding-top: 30px;
   width: 90%;
 }
 .resto a {
@@ -208,6 +201,7 @@ nav .choix p {
 }
 .resto .card {
   width: 90%;
+  height: 251px;
   position: relative;
   margin-bottom: 20px;
   display: flex;
@@ -222,7 +216,9 @@ nav .choix p {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 250px;
+  height: 170px;
+  -o-object-position: center 61%;
+     object-position: center 61%;
   border-radius: 15px 15px 0 0;
 }
 .resto .card .card-txt {
@@ -284,17 +280,6 @@ nav .choix p {
   border-radius: 2px;
   padding: 5px 10px;
   width: auto;
-  /*position: absolute;
-  right: 4%;
-  top: 4%;
-  font-size: 1.5rem;
-  font-weight: bold;
-  border: 3px $color_tertiaire solid;
-  background-color: $color_tertiaire;
-  color: $color_quaternaire;
-  border-radius: 2px;
-  padding: 5px 10px;
-  width: auto;*/
 }
 
 footer {
@@ -335,15 +320,70 @@ footer ul .partenaire {
   padding-right: 10px;
 }
 
-@media (min-width: 768px) and (max-width: 1440px) {
+@media screen and (min-width: 769px) {
   main {
     max-width: 1440px;
     width: 100%;
   }
-}
-@media screen and (min-width: 1441px) {
-  main {
-    max-width: 1441px;
+  .intro h1 {
+    font-size: 2.5rem;
+  }
+  nav {
+    width: 67.5%;
+    margin: 40px 0;
+    padding: 0 16.25%;
+  }
+  nav .choix {
+    width: 290px;
+  }
+  .placement-nav {
     width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .resto {
+    width: 75%;
+    padding: 0 12.5%;
+  }
+  .resto .placement-resto {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0 5%;
+  }
+  .resto .placement-resto .card {
+    width: 45%;
+    margin-bottom: 50px;
+  }
+  footer {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+    padding: 30px 25px;
+  }
+  footer.logo__footer {
+    padding-right: 56px;
+    padding-bottom: 2 px;
+  }
+  footer ul {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+  }
+  footer ul li.modcourt {
+    margin-right: 25px;
+  }
+  footer ul li.modlong {
+    margin-right: 40px;
+  }
+  footer img {
+    margin-bottom: 5px;
   }
 }/*# sourceMappingURL=style.css.map */
