--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -235,7 +235,7 @@ nav {
         }
 
         .card-heart {
-            @include coeur();
+            @include coeur(85%, 80%, absolute);
         }
 
         .nouveau p {
@@ -246,7 +246,8 @@ nav {
 
 //
 
-footer {
+@include footer;
+/*footer {
     padding-bottom: 20px;
     width: auto;
     height: auto;
@@ -290,7 +291,7 @@ footer {
             padding-right: 10px;
         }
     }
-}
+}*/
 
 @media screen and (min-width:769px)
 /*and (max-width:1440px)*/
