--- a/SASS/resto.scss
+++ b/SASS/resto.scss
@@ -89,13 +89,14 @@ section {
             width: 100%;
             background-color: white;
             border-radius: 15px;
-            margin-bottom: 7px;
+            margin-bottom: 10px;
+            box-shadow: 0px 3px 15px rgb(0, 0, 0, 0.1);
 
 
             h3 {
                 font-size: 1.125rem;
                 font-weight: 600;
-                padding: 15px 0 0 15px;
+                padding: 15px 55px 0 15px;
                 margin: 0;
                 white-space: nowrap;
                 overflow: hidden;
@@ -154,7 +155,7 @@ section {
     .button_resto {
         display: flex;
         justify-content: center;
-        padding: 20px 0 25px;
+        padding: 37px 0 40px;
         @include btn(186px);
     }
 }
@@ -171,22 +172,49 @@ footer {
         width: 100%;
     }
 
-    /*section {
+    section {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         .photo {
-            height: 500px;
-            object-fit: cover;
-            object-position: 90%;
+            //position: relative;
+            //width: 200%;
+            height: 383px;
+            //display: inline-block;
+            //object-fit: cover;
+            object-position: center 58%;
 
         }
 
         .carte {
-            width: 80%;
-            display: flex;
+            width: 75%;
+            border-radius: 50px 50px 0 0;
+            margin-top: -48px;
+            //font-size: ;
+
+            /*display: flex;
             //justify-content: center;
             flex-direction: column;
-            align-items: center;
+            align-items: center;*/
+            .nom h1 {
+                padding-top: 50px;
+            }
+
+            .menu .sousmenu {
+                width: 70%;
+                //display: flex;
+                //flex-direction: column;
+                //align-items: center;
+                margin: 0 auto;
+            }
+
+            .nom .card-heart {
+                @include coeur(20px, 15px, relative)
+            }
         }
-    }*/
+    }
 
     footer {
         display: flex;
@@ -206,6 +234,8 @@ footer {
             margin: 0;
 
             li {
+                margin: 0 10px;
+
                 &.modcourt {
                     margin-right: 25px;
                 }
@@ -218,7 +248,7 @@ footer {
 
 
         img {
-            margin-bottom: 10px;
+            margin-bottom: 0px;
         }
 
     }
