--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -24,13 +24,25 @@ main {
     width: 100%;
 }
 
-/*.loader {
+.kitchen {
     background-color: white;
     width: 100%;
     height: 100%;
     position: fixed;
     z-index: 1;
-}*/
+    animation: spin 2s linear infinite;
+}
+
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transforme: rotate(360deg);
+    }
+}
 
 //
 header {
