--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -24,27 +24,81 @@ main {
     width: 100%;
 }
 
-.kitchen {
-    background-color: white;
+.loader {
+    background-color: rgb(253, 253, 253);
     width: 100%;
     height: 100%;
     position: fixed;
+    //object-position: left 1300px;
     z-index: 1;
-    animation: spin 2s linear infinite;
+
+    animation: disappear 0.5s 1 forwards;
+    animation-delay: 3s;
+
+    .kitchen {
+
+        font-size: 3em;
+        color: $color_primaire;
+
+        //display: inline-block;
+        //height: 150px;
+        //width: 50px;
+        //size: 150px 150px;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        animation-duration: 3000ms;
+        //transform: scaleX(0.5em);
+        animation: spin 3s linear;
+
+        animation-fill-mode: forwards;
+        animation-duration: 3s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
 }
 
+@keyframes disappear {
+
+
+    to {
+        opacity: 0;
+        z-index: -10;
+    }
+
+}
 
 @keyframes spin {
     0% {
         transform: rotate(0deg);
+        //transform: scaleX(0.5em);
+        transform: ($color_primaire $color_tertiaire);
+    }
+
+    25% {
+        transform: rotate(20deg);
+    }
+
+    66% {
+        transform: rotate(300deg);
+        //transform: scaleX(3em);
     }
 
     100% {
-        transforme: rotate(360deg);
+        transform: rotate(360deg);
+
+
+
     }
 }
 
+
+
+
 //
+
 header {
     @include hea ();
 
@@ -257,8 +311,10 @@ nav {
 }
 
 //
+footer {
+    @include footer;
+}
 
-@include footer;
 /*footer {
     padding-bottom: 20px;
     width: auto;
