--- a/SASS/style.css
+++ b/SASS/style.css
@@ -20,17 +20,17 @@ main {
   max-width: 768px;
   width: 100%;
 }
-
-.loader {
+main .loader {
   background-color: rgb(253, 253, 253);
   width: 100%;
   height: 100%;
   position: fixed;
+  right: 0.5vh;
   z-index: 1;
   animation: disappear 0.5s 1 forwards;
   animation-delay: 3s;
 }
-.loader .kitchen {
+main .loader .kitchen {
   font-size: 3em;
   color: rgb(147, 86, 220);
   height: 100%;
