--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -22,41 +22,47 @@ a {
 main {
     max-width: 768px;
     width: 100%;
-}
 
-.loader {
-    background-color: rgb(253, 253, 253);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    //object-position: left 1300px;
-    z-index: 1;
 
-    animation: disappear 0.5s 1 forwards;
-    animation-delay: 3s;
-
-    .kitchen {
-
-        font-size: 3em;
-        color: $color_primaire;
-
-        //display: inline-block;
-        //height: 150px;
-        //width: 50px;
-        //size: 150px 150px;
-        height: 100%;
+    .loader {
+        background-color: rgb(253, 253, 253);
         width: 100%;
-        position: absolute;
-        animation-duration: 3000ms;
-        //transform: scaleX(0.5em);
-        animation: spin 3s linear;
+        height: 100%;
+        position: fixed;
+        //top: 0.5vh;
+        right: 0.5vh;
+        //object-position: left 1300px;
+        z-index: 1;
 
-        animation-fill-mode: forwards;
-        animation-duration: 3s;
-        display: flex;
-        justify-content: center;
-        align-items: center;
 
+
+        animation: disappear 0.5s 1 forwards;
+        animation-delay: 3s;
+
+
+        .kitchen {
+
+            font-size: 3em;
+            color: $color_primaire;
+
+            //display: inline-block;
+            //height: 150px;
+            //width: 50px;
+            //size: 150px 150px;
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            animation-duration: 3000ms;
+            //transform: scaleX(0.5em);
+            animation: spin 3s linear;
+
+            animation-fill-mode: forwards;
+            animation-duration: 3s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
     }
 }
 
